# cookiecutter-fastapi-react-openapi

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: openapi.json  pyproject.toml
{{cookiecutter.project_name}}/backend/: main.py
{{cookiecutter.project_name}}/frontend/src/: App.tsx
{{cookiecutter.project_name}}/frontend/src/api/: api.ts
{{cookiecutter.project_name}}/frontent/: README.md  package.json
{{cookiecutter.project_name}}/frontent/src/: App.tsx
