[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "MIT"

packages = [
    { include = "backend" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63"
uvicorn = "^0.13"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "backend.main:main"
